@@ -3,6 +3,8 @@
 
 TODO: Finish terminal output escape sequence filtering for playlists,
 at least ASCII limitation where encodings are unclear.
+document the changes ... difference in operation between terminal
+and pipe output.
 
 - Starting to intentionally use C99 in the codebase. API headers are still
   supposed to be compatible to C89.
